create comment section

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 
 
 
-    
-    <input type="text">
+<!-- create input  -->
+<input type="text">
 
+
+<!-- create elements -->
 <div>
 <h1>one</h1>
 <h1>two</h1>
